--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="module" src="./js/login.js"></script>
-    <script type="module" src="./js/firebaseConfig.js"></script> 
+    <!-- <script type="module" src="./js/login.js"></script>
+    <script type="module" src="./js/firebaseConfig.js"></script>  -->
+    <script src="{{ url_for('static', filename='js/firebaseConfig.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 </head>
 <body>
     <h1>Login</h1>
