--- a/static/templates/register.html
+++ b/static/templates/register.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <script type="module" src="./js/register.js"></script>
-    <script type="module" src="./js/firebaseConfig.js"></script> 
+    <!-- <script type="module" src="./js/register.js"></script>
+    <script type="module" src="./js/firebaseConfig.js"></script>  -->
+    <script src="{{ url_for('static', filename='./js/firebaseConfig.js') }}"></script>
+    <script src="{{ url_for('static', filename='./js/register.js') }}"></script>
 
 </head>
 <body>
