start firebase config using python

--- a/templates/register.html
+++ b/templates/register.html
@@ -6,8 +6,7 @@
     <title>Sign Up</title>
     <!-- <script type="module" src="./js/register.js"></script>
     <script type="module" src="./js/firebaseConfig.js"></script>  -->
-    <script src="{{ url_for('static', filename='js/firebaseConfig.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/register.js') }}"></script>
+\    <script src="{{ url_for('static', filename='js/register.js') }}"></script>
 
 </head>
 <body>
