--- a/templates/register.html
+++ b/templates/register.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <script src="{{ url_for('static', filename='register.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='register.js') }}"></script> -->
 
 </head>
 <body>
     <h1>Sign Up</h1>
-    <form id="signup-form" method="post">
+    <form id="signup-form" action="{{ url_for('add_user') }}" method="post">
         <label for="username">Username</label><br>
         <input type="text" id="username" name="username" autocomplete="off" required><br>
 
