--- a/templates/login.html
+++ b/templates/login.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="{{ url_for('static', filename='login.js') }}"></script>
 </head>
 <body>
     <h1>Login</h1>
-    <form id="login-form" method="post">
+    <form id="login-form" action="{{ url_for('authenticate_user') }}"method="post">
         <label for="username">Username</label><br>
         <input type="text" id="username" name="username" autocomplete="off" required><br>
         <label for="password">Password</label><br>
