add some style and the owned sets apge

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,7 +15,7 @@
 
     <div class="set-container">
         <div class="ownedSets">
-            <h1> owned sets</h1>
+            <h1><a href="{{url_for('owned_sets')}}">Owned Sets</a></h1>
         </div>
 
         <div class="wishlistSets">
