--- a/static/css/ownedSets.css
+++ b/static/css/ownedSets.css
@@ -1,14 +1,13 @@
 body{
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px; 
 }
-
 .header {
     display: flex; /* Makes the divs align horizontally */
-    grid-area: 1 / 1 / 2 / 8;
+    grid-area: 1 / 1 / 2 / 6;
     height: 50%;
     justify-content: space-between; /* Distributes space between divs */
     align-items: center; /* Aligns items vertically in the center */
@@ -19,6 +18,7 @@ body{
     box-sizing: border-box; /* Includes padding in the width calculation */
 }
 
+/* Individual header items */
 .header-item {
     font-size: 18px; /* Text size */
     color: #333; /* Text color */
@@ -31,39 +31,4 @@ body{
     color: #007bff; /* Change text color on hover */
     background-color: #e9ecef; /* Optional: Add a hover background color */
     border-radius: 5px; /* Optional: Rounded corners on hover */
-}
-
-.header-item a {
-    text-decoration: none; /* Remove underline */
-    color: inherit;        /* Inherit color from parent */
-}
-
-.set-container{
-    display: grid;
-    background-color: brown;
-    grid-area: 2 / 1 / 5 / 9;
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px; 
-    padding-left: 5vw;
-    padding-right: 5vw;
-}
-.ownedSets{
-    height: 40vh;
-    background-color: red;
-    grid-area: 2 / 1 / 5 / 3;
-    text-align: center;
-}
-
-.ownedSets a {
-    text-decoration: none; /* Remove underline */
-    color: inherit;        /* Inherit color from parent */
-    cursor: pointer;
-}
-
-.wishlistSets{
-    height: 40vh;
-    background-color: blueviolet;
-    grid-area: 2 / 4 / 5 / 6;
 }
