start make_pages

--- a/templates/sets/addSets.html
+++ b/templates/sets/addSets.html
@@ -17,7 +17,7 @@
                 <input type="text" id="theme" name="theme" placeholder="Enter a Theme" autocomplete="off">
                 <input type="text" id="year" name="year" placeholder="Enter Year" autocomplete="off">
                 <input type="text" placeholder="Search Key" autocomplete="off">
-                <input type="submit" value="Submit"><br>
+                <input type="submit" value="Search"><br>
         </form>
     </div>
     <div class="results"></div>
