try and fix the add-sets page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <div class="header-item">Welcome {{username}}!!</div>
-        <div class="header-item">Set Lookup</div>
+        <div class="header-item"><a href="{{url_for('add_sets')}}">Set Lookup</a></div>
         <div class="header-item"><a href="{{url_for('settings_page')}}">Settings</a></div>
     </div>
 
