--- a/templates/sets/addSets.html
+++ b/templates/sets/addSets.html
@@ -20,6 +20,6 @@
                 <input type="submit" value="Search"><br>
         </form>
     </div>
-    <div class="results"></div>
+    <div class="results">{{sets}}</div>
 </body>
 </html>
