--- a/templates/sets/addSets.html
+++ b/templates/sets/addSets.html
@@ -21,6 +21,20 @@
         </form>
         
     </div>
-    <div class="results">{{sets}}</div>
+    <div class="results">
+        {% if sets %}
+            <h2>Search Results:</h2>
+            <ul>
+                {% for set in sets %}
+                    <li>
+                        <strong>{{ set.name }}</strong> - {{ set.theme }} ({{ set.year }})
+                        <br> Pieces: {{ set.pieces }} | Minifigs: {{ set.minifigs }}
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p>No results found.</p>
+        {% endif %}
+    </div>
 </body>
 </html>
