change routest to actual names ex: '/profile'

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <div class="header">
         <div class="header-item">Section 1</div>
         <div class="header-item">Section 2</div>
-        <div class="header-item"><a href="{{url_for('profile_page')}}">Profile</a></div>
+        <div class="header-item"><a href="/profile-page">Profile</a></div>
     </div>
     
     <a href="/logout">Logout</a>
