--- a/templates/sets/ownedSets.html
+++ b/templates/sets/ownedSets.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-item"><a href="{{url_for('profile_page')}}">Profile</a></div>
+        <div class="header-item"><a href="/profile-page">Profile</a></div>
         <div class="header-item">Set Lookup</div>
     </div>
 </body>
