add a getter for loading sets on the owned sets page

--- a/templates/sets/ownedSets.html
+++ b/templates/sets/ownedSets.html
@@ -9,7 +9,10 @@
 <body>
     <div class="header">
         <div class="header-item"><a href="/profile-page">Profile</a></div>
-        <div class="header-item">Set Lookup</div>
+        <div class="header-item"><a href="/add-sets">Set Lookup</a></div>
+    </div>
+    <div class="ownedSets">
+        {{ sets }}
     </div>
 </body>
 </html>
