--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="wishlistSets">
-            <h1>wishlist sets</h1>
+            <h1><a href="/wishlist-sets">wishlist sets</a></h1>
         </div>
     </div>
 
