add style to profile page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,11 +16,12 @@
     <div class="set-container">
         <h1>View your Sets</h1>
         <div class="ownedSets">
-            <h1><a href="/owned-sets">Owned Sets</a></h1>
             <img src="{{recent_owned_image}}" alt="most recent owned image">
+            <h1><a href="/owned-sets">Owned Sets</a></h1>
         </div>
 
         <div class="wishlistSets">
+            <img src="{{recent_wishlist_image}}" alt="most recent wishlist image">
             <h1><a href="/wishlist-sets">Wishlist Sets</a></h1>
         </div>
     </div>
