--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -13,10 +13,10 @@ body{
     justify-content: space-between; 
     align-items: center; 
     width: 100%; 
-    background: #212121; 
+    background: #333333; 
     padding: 10px 20px; 
     border: 2px solid #fffdd0;
-    border-radius: 5px;
+    border-radius: 10px;
     box-sizing: border-box; 
 }
 
@@ -49,7 +49,7 @@ body{
 .set-container{
     border: 2px solid #fffdd0;
     border-radius: 20px;
-    background: #212121;
+    background: #333333;
     display: grid;
     grid-area: 2 / 1 / 5 / 9;
     grid-template-rows: repeat(5, 1fr);
@@ -61,12 +61,15 @@ body{
     color: white;
 }
 .ownedSets{
+    box-sizing: border-box;
     height: 40vh;
     width: 40vw;
     background-color: red;
     grid-area: 2 / 1 / 5 / 3;
     text-align: center;
     overflow: hidden;
+    border-radius: 25px;
+    padding: 20px;
 }
 
 .ownedSets img{
@@ -81,11 +84,20 @@ body{
 }
 
 .wishlistSets{
+    box-sizing: border-box;
     height: 40vh;
     width: 40vw;
     background-color: blueviolet;
     grid-area: 2 / 4 / 5 / 6;
     text-align: center;
+    overflow: hidden;
+    border-radius: 25px;
+    padding: 20px;
+}
+.wishlistSets img{
+    width: 90%;
+    height: 80%;
+    object-fit: contain;
 }
 .wishlistSets a {
     text-decoration: none; /* Remove underline */
