--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -50,22 +50,29 @@ body{
     border: 2px solid #fffdd0;
     border-radius: 20px;
     background: #333333;
-    display: grid;
     grid-area: 2 / 1 / 5 / 9;
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px; 
     padding-left: 5vw;
     padding-right: 5vw;
     color: white;
+    display: block;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    max-width: 90vw;
+}
+.sets{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 .ownedSets{
     box-sizing: border-box;
     height: 40vh;
     width: 40vw;
     background-color: red;
-    grid-area: 2 / 1 / 5 / 3;
     text-align: center;
     overflow: hidden;
     border-radius: 25px;
@@ -88,7 +95,6 @@ body{
     height: 40vh;
     width: 40vw;
     background-color: blueviolet;
-    grid-area: 2 / 4 / 5 / 6;
     text-align: center;
     overflow: hidden;
     border-radius: 25px;
