--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,6 +15,7 @@
 
     <div class="set-container">
         <h1>View your Sets</h1>
+        <div class="sets">
         <div class="ownedSets">
             <img src="{{recent_owned_image}}" alt="most recent owned image">
             <h1><a href="/owned-sets">Owned Sets</a></h1>
@@ -24,6 +25,7 @@
             <img src="{{recent_wishlist_image}}" alt="most recent wishlist image">
             <h1><a href="/wishlist-sets">Wishlist Sets</a></h1>
         </div>
+    </div>
     </div>
 
 </body>
