rearrange orientation of header in home

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="header">
-        <div class="header-item">Section 1</div>
-        <div class="header-item">Section 2</div>
+        <div class="header-item"><a href="/add-sets">Set Lookup</a></div>
+        <div class="header-item"><a href="/">Find Friends</a></div>
         <div class="header-item"><a href="/profile-page">Profile</a></div>
     </div>
     
