--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,23 +1,20 @@
 body{
     background: #121212;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px; 
+    padding: 10px;
 }
 .header {
-    display: inline-flex; 
-    grid-area: 1 / 1 / 2 / 6;
+    display: flex; 
     height: 50%;
     justify-content: space-between; 
     align-items: center; 
-    width: 100%; 
+    margin-right: 5vw;
+    margin-left: 5vw;
+    max-width: 90vw; 
     background: #333333; 
-    padding: 10px 20px; 
+    padding: 10px;
     border: 2px solid #fffdd0;
     border-radius: 10px;
-    box-sizing: border-box; 
 }
 
 /* Individual header items */
@@ -50,9 +47,6 @@ body{
     border: 2px solid #fffdd0;
     border-radius: 20px;
     background: #333333;
-    grid-area: 2 / 1 / 5 / 9;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px; 
     padding: 5vw;
     color: white;
     display: block;
