--- a/templates/home.html
+++ b/templates/home.html
@@ -11,8 +11,10 @@
         <div class="header-item"><a href="/add-sets">Set Lookup</a></div>
         <div class="header-item"><a href="/">Find Friends</a></div>
         <div class="header-item"><a href="/profile-page">Profile</a></div>
+        <div class="header-item"><a href="/logout">Logout</a></div>
     </div>
-    
-    <a href="/logout">Logout</a>
+    <div class="timeline">
+        This is gonna be the timeline.
+    </div>
 </body>
 </html>
